--- a/index.html
+++ b/index.html
@@ -3,13 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <title>Skillswap+ || Learn & Teach</title>
 </head>
 <body>
     <div class="container">
-        <div class="hero">
+
+        <!-- Home -->
+
+        <div id="cursor"></div>
+        <section class="hero">
             <nav>
                 <div class="nav1">
                     <img src="logo2.png" alt="logo" class="logo">
@@ -21,10 +28,64 @@
                 </div>
             </nav>
             <div class="content">
-                <img src="hero_img.png" alt="hero">
-                <h1>Exchang Skills. <br> Elevate Futures.</h1>
+                <div>
+                    <p>Connect with passionate learners and skilled <br> profeshionals in a premium barter-based.</p>
+                    <img src="assets_task_01k017c61dfc2safy4c7rp2psf_1752388003_img_0 (1).png" alt="hero">
+                    <img src="assets_task_01k017c61dfc2safy4c7rp2psf_1752388003_img_1.png" alt="hero">
+                </div>
+                <h1>Exchang<br> <span style="color: #f16964;">Skills</span> <br> Elevate<br><span style="color: #f16964;">Futures</span></h1>
             </div>
-        </div>
+        </section>
+
+        <section class="work">
+            <h1>How SkillSwap+ Work</h1>
+            <div class="work-process">
+                <div class="box">
+                    <div class="icon"><i class="ri-search-line"></i></div>
+                    <h2>Discover</h2>
+                    <p>Browse skills shared by others.</p>
+                </div>
+                <i class="ri-arrow-right-line"></i>
+                <div class="box">
+                    <div class="icon" style="background-color: #165f6b;"><i class="ri-user-3-line"></i></div>
+                    <h2>Connect</h2>
+                    <p>Match with you'r barter partner.</p>
+                </div>
+                <i class="ri-arrow-right-line"></i>
+                <div class="box">
+                    <div class="icon"><i class="ri-exchange-2-line"></i></div>
+                    <h2>Swap & Learn</h2>
+                    <p>Exchange, track proggress and rate each other.</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="posibilities">
+            <div class="posibilities-text">
+                <h1>Unlock Limitless <br>posibilities.</h1>
+                <h3>Grow by giving. get more by sharing.</h3>
+            </div>
+
+            <div class="posibilities-offers">
+                <div class="offer">
+                    <p>Learn Web Development Teach Photoshop</p>
+                    <div style="color: #165f6b;"><i class="ri-arrow-right-line"></i></div>
+                </div>
+                <div class="offer">
+                    <p>Teach Public Speaking Learn French</p>
+                    <div style="color: #165f6b;"><i class="ri-arrow-right-line"></i></div>
+                </div>
+                <div class="offer">
+                    <p>Excel Mastery Guitar Basics</p>
+                    <div style="color: #165f6b;"><i class="ri-arrow-right-line"></i></div>
+                </div>
+            </div>
+        </section>
+
     </div>
+
+    <script src="https://unpkg.com/lenis@1.3.4/dist/lenis.min.js"></script> 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/gsap.min.js" integrity="sha512-NcZdtrT77bJr4STcmsGAESr06BYGE8woZdSdEgqnpyqac7sugNO+Tr4bGwGF3MsnEkGKhU2KL2xh6Ec+BqsaHA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="script.js"></script>
 </body>
 </html>
