--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     <title>Skillswap+ || Learn & Teach</title>
 </head>
 <body>
@@ -19,19 +19,19 @@
         <section class="hero">
             <nav>
                 <div class="nav1">
-                    <img src="logo2.png" alt="logo" class="logo">
+                    <img src="images/logo.png" alt="logo" class="logo">
                     <a href="#">Offers</a>
                     <a href="#">Vission</a>
                 </div>
                 <div class="nav2">
-                    <button>Login</button>
+                    <a href="login.html">Login</a>
                 </div>
             </nav>
             <div class="content">
                 <div>
                     <p>Connect with passionate learners and skilled <br> profeshionals in a premium barter-based.</p>
-                    <img src="assets_task_01k017c61dfc2safy4c7rp2psf_1752388003_img_0 (1).png" alt="hero">
-                    <img src="assets_task_01k017c61dfc2safy4c7rp2psf_1752388003_img_1.png" alt="hero">
+                    <img src="images/main_image1.png" alt="hero">
+                    <img src="images/main_image2.png" alt="hero">
                 </div>
                 <h1>Exchang<br> <span style="color: #f16964;">Skills</span> <br> Elevate<br><span style="color: #f16964;">Futures</span></h1>
             </div>
@@ -43,19 +43,19 @@
                 <div class="box">
                     <div class="icon"><i class="ri-search-line"></i></div>
                     <h2>Discover</h2>
-                    <p>Browse skills shared by others.</p>
+                    <p>Browse skills shared <br> by others.</p>
                 </div>
                 <i class="ri-arrow-right-line"></i>
                 <div class="box">
                     <div class="icon" style="background-color: #165f6b;"><i class="ri-user-3-line"></i></div>
                     <h2>Connect</h2>
-                    <p>Match with you'r barter partner.</p>
+                    <p>Match with you'r <br> barter partner.</p>
                 </div>
                 <i class="ri-arrow-right-line"></i>
                 <div class="box">
                     <div class="icon"><i class="ri-exchange-2-line"></i></div>
                     <h2>Swap & Learn</h2>
-                    <p>Exchange, track proggress and rate each other.</p>
+                    <p>Exchange, track proggress <br> and rate each other.</p>
                 </div>
             </div>
         </section>
