--- a/index.html
+++ b/index.html
@@ -82,6 +82,29 @@
             </div>
         </section>
 
+        <footer>
+            <div class="foot1">
+                <div class="founder">
+                    <div class="founder-identity">
+                        <img src="images/founder.png" alt="">
+                        <h2>Haseeb</h2>
+                    </div>
+                    <div class="founder-note">
+                    <p>We build skillswap+ because we believe you,r knowledge has value _ even without money. Let's rewrite how we learn</p>
+                    </div>
+                </div>
+                <div class="foot-navigation">
+                    <a href="#">Home</a>
+                    <a href="#">Offers</a>
+                    <a href="#">Vission</a>
+                </div>
+            </div>
+            <div class="foot2">
+                <h3>Join 10,000+ members swpping their way to success.</h3>
+                <a href="#">Start Swapping <i class="ri-arrow-right-line"></i></a>
+            </div>
+        </footer>
+
     </div>
 
     <script src="https://unpkg.com/lenis@1.3.4/dist/lenis.min.js"></script> 
