--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             </div>
             <div class="foot2">
                 <h3>Join 10,000+ members swpping their way to success.</h3>
-                <a href="#">Start Swapping <i class="ri-arrow-right-line"></i></a>
+                <button><a href="#">Start Swapping <i class="ri-arrow-right-line"></i></a></button>
             </div>
         </footer>
 
