--- a/index.html
+++ b/index.html
@@ -82,6 +82,28 @@
             </div>
         </section>
 
+        <section class="our-swapper">
+            <h1>Meet Our SkillSwappers</h1>
+            <p>Real people, Real growth, See how Members are Transforming Thier Lives.</p>
+            <div class="swappers-cards">
+                <div class="swapper-card">
+                <div class="swapper-img"><img src="images/person 1.png" alt="swapper image"></div>
+                <h3 class="swapper-name">Amit</h3>
+                <p class="swapper-desc">Exchanged coding lessons for guitar tips _ Now fluent in both!</p>
+            </div>
+            <div class="swapper-card">
+                <div class="swapper-img"><img src="images/person 2.png" alt="swapper image"></div>
+                <h3 class="swapper-name">Lina</h3>
+                <p class="swapper-desc">Used SkillSwap_ to learn French while teaching public speaking.</p>
+            </div>
+            <div class="swapper-card">
+                <div class="swapper-img"><img src="images/person 3.png" alt="swapper image"></div>
+                <h3 class="swapper-name">Zain</h3>
+                <p class="swapper-desc">Shared UI/UX skills and gained photography mastery.</p>
+            </div>
+            </div>
+        </section>
+
         <footer>
             <div class="foot1">
                 <div class="founder">
@@ -100,7 +122,7 @@
                 </div>
             </div>
             <div class="foot2">
-                <h3>Join 10,000+ members swpping their way to success.</h3>
+                <h3>Join 10,000+ members swapping their way to success.</h3>
                 <button><a href="#">Start Swapping <i class="ri-arrow-right-line"></i></a></button>
             </div>
         </footer>
