--- a/index.html
+++ b/index.html
@@ -1,136 +1,263 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/remixicon.css" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/remixicon.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon" />
     <title>Skillswap+ || Learn & Teach</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
+      <!-- Home -->
 
-        <!-- Home -->
+      <div id="cursor"></div>
+      <section class="hero">
+        <nav>
+          <div class="nav1">
+            <img src="images/logo.png" alt="logo" class="logo" />
+            <a href="#">Offers</a>
+            <a href="#">Vission</a>
+          </div>
+          <div class="nav2">
+            <a href="login.html">Login</a>
+          </div>
+        </nav>
+        <div class="content">
+          <div>
+            <p>
+              Connect with passionate learners and skilled <br />
+              profeshionals in a premium barter-based.
+            </p>
+            <img src="images/main_image1.png" alt="hero" />
+            <img src="images/main_image2.png" alt="hero" />
+          </div>
+          <h1>
+            Exchang<br />
+            <span style="color: #f16964">Skills</span> <br />
+            Elevate<br /><span style="color: #f16964">Futures</span>
+          </h1>
+        </div>
+      </section>
 
-        <div id="cursor"></div>
-        <section class="hero">
-            <nav>
-                <div class="nav1">
-                    <img src="images/logo.png" alt="logo" class="logo">
-                    <a href="#">Offers</a>
-                    <a href="#">Vission</a>
-                </div>
-                <div class="nav2">
-                    <a href="login.html">Login</a>
-                </div>
-            </nav>
-            <div class="content">
-                <div>
-                    <p>Connect with passionate learners and skilled <br> profeshionals in a premium barter-based.</p>
-                    <img src="images/main_image1.png" alt="hero">
-                    <img src="images/main_image2.png" alt="hero">
-                </div>
-                <h1>Exchang<br> <span style="color: #f16964;">Skills</span> <br> Elevate<br><span style="color: #f16964;">Futures</span></h1>
+      <section class="work">
+        <h1>How SkillSwap+ Work</h1>
+        <div class="work-process">
+          <div class="box">
+            <div class="icon"><i class="ri-search-line"></i></div>
+            <h2>Discover</h2>
+            <p>
+              Browse skills shared <br />
+              by others.
+            </p>
+          </div>
+          <i class="ri-arrow-right-line"></i>
+          <div class="box">
+            <div class="icon" style="background-color: #165f6b">
+              <i class="ri-user-3-line"></i>
             </div>
-        </section>
+            <h2>Connect</h2>
+            <p>
+              Match with you'r <br />
+              barter partner.
+            </p>
+          </div>
+          <i class="ri-arrow-right-line"></i>
+          <div class="box">
+            <div class="icon"><i class="ri-exchange-2-line"></i></div>
+            <h2>Swap & Learn</h2>
+            <p>
+              Exchange, track proggress <br />
+              and rate each other.
+            </p>
+          </div>
+        </div>
+      </section>
 
-        <section class="work">
-            <h1>How SkillSwap+ Work</h1>
-            <div class="work-process">
-                <div class="box">
-                    <div class="icon"><i class="ri-search-line"></i></div>
-                    <h2>Discover</h2>
-                    <p>Browse skills shared <br> by others.</p>
-                </div>
-                <i class="ri-arrow-right-line"></i>
-                <div class="box">
-                    <div class="icon" style="background-color: #165f6b;"><i class="ri-user-3-line"></i></div>
-                    <h2>Connect</h2>
-                    <p>Match with you'r <br> barter partner.</p>
-                </div>
-                <i class="ri-arrow-right-line"></i>
-                <div class="box">
-                    <div class="icon"><i class="ri-exchange-2-line"></i></div>
-                    <h2>Swap & Learn</h2>
-                    <p>Exchange, track proggress <br> and rate each other.</p>
-                </div>
-            </div>
-        </section>
+      <section class="posibilities">
+        <div class="posibilities-text">
+          <h1>Unlock Limitless <br />posibilities.</h1>
+          <h3>Grow by giving. get more by sharing.</h3>
+        </div>
 
-        <section class="posibilities">
-            <div class="posibilities-text">
-                <h1>Unlock Limitless <br>posibilities.</h1>
-                <h3>Grow by giving. get more by sharing.</h3>
+        <div class="posibilities-offers">
+          <div class="offer">
+            <p>Learn Web Development Teach Photoshop</p>
+            <div style="color: #165f6b">
+              <i class="ri-arrow-right-line"></i>
             </div>
+          </div>
+          <div class="offer">
+            <p>Teach Public Speaking Learn French</p>
+            <div style="color: #165f6b">
+              <i class="ri-arrow-right-line"></i>
+            </div>
+          </div>
+          <div class="offer">
+            <p>Excel Mastery Guitar Basics</p>
+            <div style="color: #165f6b">
+              <i class="ri-arrow-right-line"></i>
+            </div>
+          </div>
+        </div>
+      </section>
 
-            <div class="posibilities-offers">
-                <div class="offer">
-                    <p>Learn Web Development Teach Photoshop</p>
-                    <div style="color: #165f6b;"><i class="ri-arrow-right-line"></i></div>
-                </div>
-                <div class="offer">
-                    <p>Teach Public Speaking Learn French</p>
-                    <div style="color: #165f6b;"><i class="ri-arrow-right-line"></i></div>
-                </div>
-                <div class="offer">
-                    <p>Excel Mastery Guitar Basics</p>
-                    <div style="color: #165f6b;"><i class="ri-arrow-right-line"></i></div>
-                </div>
+      <section class="our-swapper">
+        <h1>Meet Our SkillSwappers</h1>
+        <p>
+          Real people, Real growth, See how Members are Transforming Thier
+          Lives.
+        </p>
+        <div class="swappers-cards">
+          <div class="swapper-card">
+            <div class="swapper-img">
+              <img src="images/person 1.png" alt="swapper image" />
             </div>
-        </section>
+            <h3 class="swapper-name">Amit</h3>
+            <p class="swapper-desc">
+              Exchanged coding lessons for guitar tips _ Now fluent in both!
+            </p>
+          </div>
+          <div class="swapper-card">
+            <div class="swapper-img">
+              <img src="images/person 2.png" alt="swapper image" />
+            </div>
+            <h3 class="swapper-name">Lina</h3>
+            <p class="swapper-desc">
+              Used SkillSwap_ to learn French while teaching public speaking.
+            </p>
+          </div>
+          <div class="swapper-card">
+            <div class="swapper-img">
+              <img src="images/person 3.png" alt="swapper image" />
+            </div>
+            <h3 class="swapper-name">Zain</h3>
+            <p class="swapper-desc">
+              Shared UI/UX skills and gained photography mastery.
+            </p>
+          </div>
+        </div>
+      </section>
 
-        <section class="our-swapper">
-            <h1>Meet Our SkillSwappers</h1>
-            <p>Real people, Real growth, See how Members are Transforming Thier Lives.</p>
-            <div class="swappers-cards">
-                <div class="swapper-card">
-                <div class="swapper-img"><img src="images/person 1.png" alt="swapper image"></div>
-                <h3 class="swapper-name">Amit</h3>
-                <p class="swapper-desc">Exchanged coding lessons for guitar tips _ Now fluent in both!</p>
-            </div>
-            <div class="swapper-card">
-                <div class="swapper-img"><img src="images/person 2.png" alt="swapper image"></div>
-                <h3 class="swapper-name">Lina</h3>
-                <p class="swapper-desc">Used SkillSwap_ to learn French while teaching public speaking.</p>
-            </div>
-            <div class="swapper-card">
-                <div class="swapper-img"><img src="images/person 3.png" alt="swapper image"></div>
-                <h3 class="swapper-name">Zain</h3>
-                <p class="swapper-desc">Shared UI/UX skills and gained photography mastery.</p>
-            </div>
-            </div>
-        </section>
+      <div class="faq">
+        <h2>Frequently Asked Questions</h2>
+        <div class="contentBox">
+          <div class="question">What is Netflix?</div>
+          <div class="answer">
+            Netflix is a streaming service that offers a wide variety of
+            award-winning TV shows, movies, anime, documentaries, and more on
+            thousands of internet-connected devices.
+            <br />
+            <br />
+            You can watch as much as you want, whenever you want without a
+            single commercial – all for one low monthly price. There's always
+            something new to discover and new TV shows and movies are added
+            every week!
+          </div>
+        </div>
+        <div class="contentBox">
+          <div class="question">How much does Netflix cost?</div>
+          <div class="answer">
+            Watch Netflix on your smartphone, tablet, Smart TV, laptop, or
+            streaming device, all for one fixed monthly fee. Plans range from Rs
+            250 to Rs 1,100 a month. No extra costs, no contracts.
+          </div>
+        </div>
+        <div class="contentBox">
+          <div class="question">Where can I watch?</div>
+          <div class="answer">
+            Watch anywhere, anytime. Sign in with your Netflix account to watch
+            instantly on the web at netflix.com from your personal computer or
+            on any internet-connected device that offers the Netflix app,
+            including smart TVs, smartphones, tablets, streaming media players
+            and game consoles.
+            <br />
+            <br />
+            You can also download your favorite shows with the iOS, Android, or
+            Windows 10 app. Use downloads to watch while you're on the go and
+            without an internet connection. Take Netflix with you anywhere.
+          </div>
+        </div>
+        <div class="contentBox">
+          <div class="question">How do I cancel?</div>
+          <div class="answer">
+            Netflix is flexible. There are no pesky contracts and no
+            commitments. You can easily cancel your account online in two
+            clicks. There are no cancellation fees – start or stop your account
+            anytime.
+          </div>
+        </div>
+        <div class="contentBox">
+          <div class="question">What can I watch on Netflix?</div>
+          <div class="answer">
+            Netflix has an extensive library of feature films, documentaries, TV
+            shows, anime, award-winning Netflix originals, and more. Watch as
+            much as you want, anytime you want.
+          </div>
+        </div>
+        <div class="contentBox">
+          <div class="question">Is Netflix good for kids?</div>
+          <div class="answer">
+            The Netflix Kids experience is included in your membership to give
+            parents control while kids enjoy family-friendly TV shows and movies
+            in their own space.
+            <br />
+            <br />
+            Kids profiles come with PIN-protected parental controls that let you
+            restrict the maturity rating of content kids can watch and block
+            specific titles you don’t want kids to see.
+          </div>
+        </div>
+      </div>
 
-        <footer>
-            <div class="foot1">
-                <div class="founder">
-                    <div class="founder-identity">
-                        <img src="images/founder.png" alt="">
-                        <h2>Haseeb</h2>
-                    </div>
-                    <div class="founder-note">
-                    <p>We build skillswap+ because we believe you,r knowledge has value _ even without money. Let's rewrite how we learn</p>
-                    </div>
-                </div>
-                <div class="foot-navigation">
-                    <a href="#">Home</a>
-                    <a href="#">Offers</a>
-                    <a href="#">Vission</a>
-                </div>
+      <footer>
+        <div class="foot1">
+          <div class="founder">
+            <div class="founder-identity">
+              <img src="images/founder.png" alt="" />
+              <h2>Haseeb</h2>
             </div>
-            <div class="foot2">
-                <h3>Join 10,000+ members swapping their way to success.</h3>
-                <button><a href="#">Start Swapping <i class="ri-arrow-right-line"></i></a></button>
+            <div class="founder-note">
+              <p>
+                We build skillswap+ because we believe you,r knowledge has value
+                _ even without money. Let's rewrite how we learn
+              </p>
             </div>
-        </footer>
-
+          </div>
+          <div class="foot-navigation">
+            <a href="#">Home</a>
+            <a href="#">Offers</a>
+            <a href="#">Vission</a>
+          </div>
+        </div>
+        <div class="foot2">
+          <h3>Join 10,000+ members swapping their way to success.</h3>
+          <button>
+            <a href="#">Start Swapping <i class="ri-arrow-right-line"></i></a>
+          </button>
+        </div>
+      </footer>
     </div>
 
-    <script src="https://unpkg.com/lenis@1.3.4/dist/lenis.min.js"></script> 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/gsap.min.js" integrity="sha512-NcZdtrT77bJr4STcmsGAESr06BYGE8woZdSdEgqnpyqac7sugNO+Tr4bGwGF3MsnEkGKhU2KL2xh6Ec+BqsaHA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://unpkg.com/lenis@1.3.4/dist/lenis.min.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/gsap.min.js"
+      integrity="sha512-NcZdtrT77bJr4STcmsGAESr06BYGE8woZdSdEgqnpyqac7sugNO+Tr4bGwGF3MsnEkGKhU2KL2xh6Ec+BqsaHA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
