--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="container">
       <!-- Home -->
 
-      <div id="cursor"></div>
+      <div class="cursor"></div>
       <section class="hero">
         <nav>
           <div class="nav1">
@@ -154,70 +154,39 @@
       <div class="faq">
         <h2>Frequently Asked Questions</h2>
         <div class="contentBox">
-          <div class="question">What is Netflix?</div>
+          <div class="question">What is SkillSwap+ and how does it work?</div>
           <div class="answer">
-            Netflix is a streaming service that offers a wide variety of
-            award-winning TV shows, movies, anime, documentaries, and more on
-            thousands of internet-connected devices.
-            <br />
-            <br />
-            You can watch as much as you want, whenever you want without a
-            single commercial – all for one low monthly price. There's always
-            something new to discover and new TV shows and movies are added
-            every week!
+            SkillSwap+ is a unique online platform where users can exchange skills with each other using a barter system instead of money. For example, if you’re good at graphic design and want to learn guitar, you can offer your design skills in return for guitar lessons from someone on the platform. This encourages mutual learning, builds a sense of community, and promotes personal and professional development without financial barriers.
           </div>
         </div>
         <div class="contentBox">
-          <div class="question">How much does Netflix cost?</div>
+          <div class="question">Is SkillSwap+ completely free to use?</div>
           <div class="answer">
-            Watch Netflix on your smartphone, tablet, Smart TV, laptop, or
-            streaming device, all for one fixed monthly fee. Plans range from Rs
-            250 to Rs 1,100 a month. No extra costs, no contracts.
+            Yes, SkillSwap+ is entirely free for all users. Our goal is to create an inclusive space where people can learn new things without the stress of payments or subscriptions. You simply register, list the skills you offer, and start connecting with others who are interested in skill exchanges. We believe learning should be accessible to everyone, and that’s why we’ve kept the platform free.
           </div>
         </div>
         <div class="contentBox">
-          <div class="question">Where can I watch?</div>
+          <div class="question">How can I start swapping skills with someone?</div>
           <div class="answer">
-            Watch anywhere, anytime. Sign in with your Netflix account to watch
-            instantly on the web at netflix.com from your personal computer or
-            on any internet-connected device that offers the Netflix app,
-            including smart TVs, smartphones, tablets, streaming media players
-            and game consoles.
-            <br />
-            <br />
-            You can also download your favorite shows with the iOS, Android, or
-            Windows 10 app. Use downloads to watch while you're on the go and
-            without an internet connection. Take Netflix with you anywhere.
+            To start a skill swap, first create your user profile and clearly mention the skills you can offer and the ones you're interested in learning. Once your profile is set up, you can browse through other users' profiles and send them a swap request. If the other person agrees, both of you can decide on the schedule, platform (in-person or online), and mode of learning. It's all about mutual understanding and flexible collaboration.
           </div>
         </div>
         <div class="contentBox">
-          <div class="question">How do I cancel?</div>
+          <div class="question">Can I offer or learn more than one skill at the same time?</div>
           <div class="answer">
-            Netflix is flexible. There are no pesky contracts and no
-            commitments. You can easily cancel your account online in two
-            clicks. There are no cancellation fees – start or stop your account
-            anytime.
+            Absolutely! SkillSwap+ is designed to support multi-skill learning and sharing. You can list as many skills as you want to offer on your profile, and you're also free to request multiple skills from others. Whether you’re a designer who wants to learn coding and cooking, or a photographer who can also teach video editing, SkillSwap+ allows you to explore and grow in various directions.
           </div>
         </div>
         <div class="contentBox">
-          <div class="question">What can I watch on Netflix?</div>
+          <div class="question">How can I trust the person I'm swapping skills with?</div>
           <div class="answer">
-            Netflix has an extensive library of feature films, documentaries, TV
-            shows, anime, award-winning Netflix originals, and more. Watch as
-            much as you want, anytime you want.
+            We understand that trust is important when you're working with someone new. That's why SkillSwap+ includes a review and rating system. After each skill exchange session, users can leave feedback for each other. These reviews help the community make informed decisions and build credibility. Additionally, user profiles show verification status and past activities, giving you more confidence when connecting.
           </div>
         </div>
         <div class="contentBox">
-          <div class="question">Is Netflix good for kids?</div>
+          <div class="question">Is there any support if I face an issue during the skill exchange?</div>
           <div class="answer">
-            The Netflix Kids experience is included in your membership to give
-            parents control while kids enjoy family-friendly TV shows and movies
-            in their own space.
-            <br />
-            <br />
-            Kids profiles come with PIN-protected parental controls that let you
-            restrict the maturity rating of content kids can watch and block
-            specific titles you don’t want kids to see.
+            Yes, our support team is here to help. If you ever experience any issues such as miscommunication, inappropriate behavior, or technical problems, you can report the user directly from their profile or contact our support team via the Help section. We are committed to keeping SkillSwap+ a safe and friendly environment for everyone.
           </div>
         </div>
       </div>
