--- a/login.html
+++ b/login.html
@@ -7,15 +7,9 @@
   <title>Login</title>
 </head>
 <body>
-
-  <div class="login-container">
-    <!-- Left side: Animated dropping image -->
-    <div class="left">
-      <img src="images/20250716_1033_Login Interaction Graphics_remix_01k08vdf0zf0ma6kmfd9yf0tx7 (1).png" class="drop-image" alt="Dropping Image">
-    </div>
-
-    <!-- Right side: Login form -->
-    <div class="right">
+<div class="container">
+  <div class="cursor"></div>
+    <div class="login-container">
       <div class="login-card">
         <h2>Log In</h2>
         <form>
@@ -26,8 +20,7 @@
         </form>
       </div>
     </div>
-  </div>
-
+</div>
 
   <script src="script.js"></script>
 </body>
