--- a/singup.html
+++ b/singup.html
@@ -7,16 +7,9 @@
   <title>Signup</title>
 </head>
 <body>
-
-  <div class="avatar left-avatar">
-    <img src="images/20250716_1013_Color Palette Swap_remix_01k08t8sp0ep0tdrcvk6mh56ry (2).png" alt="Left Avatar">
-  </div>
-
-  <div class="avatar right-avatar">
-    <img src="images/20250716_1018_Color Palette Illustration_remix_01k08tk1t3emtagwjbwpgb03h1 (1).png" alt="Right Avatar">
-  </div>
-
-  <div class="form-container">
+<div class="container">
+  <div class="cursor"></div>
+    <div class="form-container">
     <div class="signup-card">
       <h1>Sign Up</h1>
       <form>
@@ -30,6 +23,7 @@
       </form>
     </div>
   </div>
+</div>
 
   <script src="script.js"></script>
 </body>
