--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
           <div class="founder">
             <div class="founder-identity">
               <img src="images/founder.png" alt="" />
-              <h2>Haseeb</h2>
+              <h2>Founder</h2>
             </div>
             <div class="founder-note">
               <p>
