--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
   <div class="cursor"></div>
     <div class="login-container">
       <div class="login-card">
-        <h2>Log In</h2>
+        <h1>Log In</h1>
         <form>
           <input type="email" placeholder="Email Address" required />
           <input type="password" placeholder="Password" required />
@@ -22,6 +22,12 @@
     </div>
 </div>
 
+  <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/gsap.min.js"
+      integrity="sha512-NcZdtrT77bJr4STcmsGAESr06BYGE8woZdSdEgqnpyqac7sugNO+Tr4bGwGF3MsnEkGKhU2KL2xh6Ec+BqsaHA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
   <script src="script.js"></script>
 </body>
 </html>
